--- a/FamilyX/FamilyTree/Storyboards/Profile.storyboard
+++ b/FamilyX/FamilyTree/Storyboards/Profile.storyboard
@@ -331,7 +331,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="1422"/>
                                 <subviews>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="feM-WB-DtQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1070"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1422"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uf9-cZ-zag">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="1070"/>
@@ -686,6 +686,7 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="feM-WB-DtQ" secondAttribute="bottom" id="0mJ-Th-iOy"/>
                                     <constraint firstItem="feM-WB-DtQ" firstAttribute="leading" secondItem="uc6-Lx-Zeb" secondAttribute="leading" id="4h7-KT-7vG"/>
                                     <constraint firstItem="feM-WB-DtQ" firstAttribute="top" secondItem="uc6-Lx-Zeb" secondAttribute="top" id="PWq-Bv-B0q"/>
                                     <constraint firstAttribute="trailing" secondItem="feM-WB-DtQ" secondAttribute="trailing" id="ToQ-bY-ZQp"/>
