--- a/FamilyX/FamilyTree/Views/PeopleView.xib
+++ b/FamilyX/FamilyTree/Views/PeopleView.xib
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PeopleView" customModule="FamilyX" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PeopleView" customModule="FamilyTree" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="54" height="73"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="female" translatesAutoresizingMaskIntoConstraints="NO" id="aC6-6y-90f">
-                    <rect key="frame" x="14.5" y="3" width="25" height="25"/>
+                    <rect key="frame" x="14.5" y="12" width="25" height="25"/>
                     <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="25" id="Fbw-QZ-s78"/>
@@ -26,17 +26,20 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06/02/1998" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qYK-tN-Dnp">
-                    <rect key="frame" x="2" y="37" width="50" height="5"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="5" id="8x7-c7-3Hk"/>
-                    </constraints>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06/02/1998" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qYK-tN-Dnp">
+                    <rect key="frame" x="2" y="44" width="50" height="5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="4"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vy" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BX8-Ta-2AZ">
-                    <rect key="frame" x="2" y="30" width="50" height="5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vy" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BX8-Ta-2AZ">
+                    <rect key="frame" x="2" y="39" width="50" height="5"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="4"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hanoivis2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xZf-aX-lJH">
+                    <rect key="frame" x="4" y="4" width="21" height="5"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="4"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -45,22 +48,26 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" red="0.89726156000000001" green="0.76000779870000001" blue="0.81176918750000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
-                <constraint firstItem="aC6-6y-90f" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="3" id="CCv-LK-g5y"/>
+                <constraint firstItem="xZf-aX-lJH" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="4" id="4hr-qy-xld"/>
+                <constraint firstItem="xZf-aX-lJH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="4" id="5P4-kV-5cc"/>
+                <constraint firstItem="aC6-6y-90f" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="CCv-LK-g5y"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="qYK-tN-Dnp" secondAttribute="bottom" constant="5" id="JU4-0t-1yH"/>
                 <constraint firstAttribute="trailing" secondItem="BX8-Ta-2AZ" secondAttribute="trailing" constant="2" id="JcK-Th-0wG"/>
-                <constraint firstItem="qYK-tN-Dnp" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="2" id="LqH-5d-82X"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="qYK-tN-Dnp" secondAttribute="trailing" constant="2" id="XgQ-N3-scx"/>
                 <constraint firstItem="BX8-Ta-2AZ" firstAttribute="top" secondItem="aC6-6y-90f" secondAttribute="bottom" constant="2" id="cQx-bD-vWs"/>
                 <constraint firstItem="BX8-Ta-2AZ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="2" id="kb9-m5-W5C"/>
+                <constraint firstItem="qYK-tN-Dnp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="2" id="qUq-RO-8b5"/>
                 <constraint firstItem="aC6-6y-90f" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="u4K-xL-jjX"/>
-                <constraint firstItem="qYK-tN-Dnp" firstAttribute="top" secondItem="BX8-Ta-2AZ" secondAttribute="bottom" constant="2" id="wM9-o0-gRr"/>
+                <constraint firstItem="qYK-tN-Dnp" firstAttribute="top" secondItem="BX8-Ta-2AZ" secondAttribute="bottom" id="wM9-o0-gRr"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="constraint_avatar_to_top" destination="CCv-LK-g5y" id="iI5-5L-6dG"/>
                 <outlet property="constraint_height_avatar" destination="Z3e-bH-suc" id="fbM-iZ-3Ur"/>
                 <outlet property="img_avatar" destination="aC6-6y-90f" id="26E-TK-bq6"/>
                 <outlet property="lbl_birthday" destination="qYK-tN-Dnp" id="BGM-KR-XbR"/>
                 <outlet property="lbl_name" destination="BX8-Ta-2AZ" id="2SW-eR-pmU"/>
+                <outlet property="lbl_username" destination="xZf-aX-lJH" id="LA9-0Y-ibq"/>
             </connections>
             <point key="canvasLocation" x="-576.81159420289862" y="-47.209821428571423"/>
         </view>
