--- a/FamilyX/FamilyTree/Views/TreeSeperatorViewBmo.xib
+++ b/FamilyX/FamilyTree/Views/TreeSeperatorViewBmo.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -34,7 +34,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="BqL-Cu-jOo" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="4eH-VH-Ld3"/>
                 <constraint firstAttribute="trailing" secondItem="BqL-Cu-jOo" secondAttribute="trailing" constant="5" id="7Mr-GK-T5w"/>
@@ -46,7 +46,7 @@
                 <outlet property="lbl_title" destination="WFN-rz-1Qh" id="9Hc-ak-Bin"/>
                 <outlet property="view_container" destination="BqL-Cu-jOo" id="qc6-gT-IdJ"/>
             </connections>
-            <point key="canvasLocation" x="-123.18840579710145" y="-162.38839285714286"/>
+            <point key="canvasLocation" x="-93" y="-143"/>
         </view>
     </objects>
     <resources>
