--- a/FamilyX/FamilyTree/Storyboards/Base.lproj/Main.storyboard
+++ b/FamilyX/FamilyTree/Storyboards/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.59445780520000002" green="0.44810974599999998" blue="0.38037723299999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" red="0.086274509799999996" green="0.21960784310000001" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstItem="0LJ-f9-lS8" firstAttribute="top" secondItem="ZRH-tv-0oL" secondAttribute="top" constant="10" id="9gh-fP-3cA"/>
                                             <constraint firstAttribute="trailing" secondItem="0LJ-f9-lS8" secondAttribute="trailing" constant="10" id="BzF-bj-gsk"/>
@@ -65,7 +65,7 @@
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ma3-AT-NaI">
                                         <rect key="frame" x="269" y="145" width="70" height="40"/>
-                                        <color key="backgroundColor" red="0.59445780520000002" green="0.44810974599999998" blue="0.38037723299999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" red="0.086274509799999996" green="0.21960784310000001" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="EoU-Tu-vCp"/>
                                             <constraint firstAttribute="width" constant="70" id="KI2-6n-7fA"/>
@@ -96,14 +96,14 @@
                                         </constraints>
                                         <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="14"/>
                                         <state key="normal" title="Deny">
-                                            <color key="titleColor" systemColor="systemRedColor"/>
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                 <real key="value" value="8"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                                <color key="value" systemColor="systemGray6Color"/>
+                                                <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                 <real key="value" value="1"/>
@@ -303,7 +303,7 @@
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tMe-aB-nbA">
                                                         <rect key="frame" x="20" y="24" width="334" height="40"/>
-                                                        <color key="backgroundColor" red="0.42745098039215684" green="0.32549019607843138" blue="0.26666666666666666" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="36z-lq-zPZ"/>
                                                         </constraints>
@@ -314,6 +314,12 @@
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                 <real key="value" value="20"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                                <real key="value" value="1"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
@@ -340,7 +346,7 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="SxD-aN-9g9"/>
-                        <color key="backgroundColor" red="0.53333333333333333" green="0.35686274509803922" blue="0.27450980392156865" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.086274509799999996" green="0.21960784310000001" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="qnV-GA-ah9" firstAttribute="leading" secondItem="SxD-aN-9g9" secondAttribute="leading" constant="20" id="BJD-ZU-ae4"/>
                             <constraint firstItem="fv5-dE-AKj" firstAttribute="centerX" secondItem="DjQ-pb-ypW" secondAttribute="centerX" id="Ryr-34-vsM"/>
@@ -671,7 +677,7 @@
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xRw-4b-P1C">
                                                 <rect key="frame" x="20" y="705" width="374" height="40"/>
-                                                <color key="backgroundColor" red="0.44567430019999998" green="0.3225761056" blue="0.25488686560000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="MMl-lg-VN8"/>
                                                 </constraints>
@@ -682,6 +688,12 @@
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                         <real key="value" value="20"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                        <real key="value" value="1"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                        <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
@@ -695,7 +707,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.53333333333333333" green="0.35686274509803922" blue="0.27450980392156865" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.086274509799999996" green="0.21960784310000001" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstItem="nfr-Ea-Wox" firstAttribute="top" secondItem="dhR-QQ-f3G" secondAttribute="top" constant="70" id="94P-Ao-OI9"/>
                                             <constraint firstItem="xRw-4b-P1C" firstAttribute="leading" secondItem="dhR-QQ-f3G" secondAttribute="leading" constant="20" id="FA3-gR-ulN"/>
@@ -709,7 +721,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.53333333333333333" green="0.35686274509803922" blue="0.27450980392156865" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.086274509799999996" green="0.21960784310000001" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstItem="dhR-QQ-f3G" firstAttribute="top" secondItem="wLw-tF-0ra" secondAttribute="top" id="FSA-o9-iOK"/>
                                     <constraint firstItem="dhR-QQ-f3G" firstAttribute="width" secondItem="wLw-tF-0ra" secondAttribute="width" id="HKg-dQ-Ziu"/>
@@ -728,7 +740,7 @@
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="J4F-cw-dst"/>
-                        <color key="backgroundColor" red="0.53333333333333333" green="0.35686274509803922" blue="0.27450980392156865" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.086274509799999996" green="0.21960784310000001" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="J4F-cw-dst" firstAttribute="trailing" secondItem="wLw-tF-0ra" secondAttribute="trailing" id="SCU-wT-QP5"/>
                             <constraint firstItem="J4F-cw-dst" firstAttribute="bottom" secondItem="wLw-tF-0ra" secondAttribute="bottom" constant="20" id="bCC-rS-8ae"/>
@@ -949,12 +961,6 @@
         </systemColor>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
