--- a/FamilyX/FamilyTree/Views/ViewHeaderEditor.xib
+++ b/FamilyX/FamilyTree/Views/ViewHeaderEditor.xib
@@ -16,12 +16,12 @@
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Owner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DMl-EI-vlc">
                     <rect key="frame" x="10" y="25" width="163" height="17"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                    <color key="textColor" red="0.53333333329999999" green="0.35686274509999999" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" red="1" green="0.92431869241366016" blue="0.87408704753483313" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color key="backgroundColor" red="0.086274509799999996" green="0.21960784310000001" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="DMl-EI-vlc" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="4tn-fF-jLF"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="DMl-EI-vlc" secondAttribute="trailing" constant="10" id="WaB-sj-jOt"/>
